register and verify implemented
